# projectX

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  clean  cmake_install.cmake  compile_commands.json  handmade  little_map.hpp  ycm_extra_conf.py
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/core/: CMakeLists.txt  Makefile  cmake_install.cmake  shader.cpp  shader.h  window.cpp  window.h
src/core/audio/: speaker.cpp  speaker.h
src/core/containers/: little_map.h  little_map.hpp
src/core/graphics/: camera.cpp  camera.h  color.h  drawable.h  key.h  mesh.h  mesh.hpp  rectangle.cpp  rectangle.h  shader.cpp  shader.h  square.cpp  square.h  texture.cpp  texture.h  window.cpp  window.h
src/core/math/: mat4.h  math_traits.h  operations.h  point.h  point.hpp  vec2.h  vec3.h  vec4.h
src/game/: CMakeLists.txt  hero.cpp  hero.h  player.cpp  player.h  renderer.cpp  renderer.h  roamer.cpp  roamer.h  settings.h  tile_map.cpp  tile_map.h  world.cpp  world.h  world_position.cpp  world_position.h
src/res/shaders/: grad.fs  grad.vs  solid.fs  solid.vs
src/util/: CMakeLists.txt  Makefile  cmake_install.cmake  file_reader.cpp  file_reader.h  handmade_defs.h  handmade_util.h  image_reader.cpp  image_reader.h
