set(CMAKE_EXPORT_COMPILE_COMMANDS on) #To generate compilation database for ycm


add_library (util handmade_util.h)

#target_link_libraries(graphics PRIVATE glfw)
#target_link_libraries(graphics PUBLIC glad)
#target_link_libraries(graphics PUBLIC glm)

#target_include_directories(graphics PUBLIC glfw)
#target_include_directories(graphics PUBLIC glad)
#target_include_directories(graphics PUBLIC glm)
